--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "3.8.6" %}
+{% set version = "3.8.7" %}
 {% set linkage_nature = os.environ.get('PY_INTERP_LINKAGE_NATURE', '') %}
 {% set debug = os.environ.get('PY_INTERP_DEBUG', '') %}
 {% if linkage_nature != '' %}
@@ -14,8 +14,8 @@ package:
 
 source:
   - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tar.xz
-    # md5 from: https://www.python.org/downloads/release/python-385/
-    md5: 69e73c49eeb1a853cefd26d18c9d069d
+    # md5 from: https://www.python.org/downloads/release/python-387/
+    md5: 60fe018fffc7f33818e6c340d29e2db9
     patches:
       - patches/0001-Fix-off-by-one-error-in-_winapi_WaitForMultipleObjec.patch
 {% if 'conda-forge' not in channel_targets %}
@@ -52,6 +52,8 @@ source:
       - patches/0029-fix-test_macholib-for-Mac-OS-11.patch
       - patches/0030-Xcode-12-Beta-4-declares-_dyld_shared_cache_contains.patch
       - patches/0031-gh21564.patch.patch  # [osx and arm64]
+      # REMINDER: REMOVE BELOW PATCH WHEN RELEASING PYTHON3.8.8 FROM SOURCE
+      - patches/0032-patch-cve-2021-3177-for-py387-remove-this-when-release-py388.patch
 
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
@@ -85,7 +87,7 @@ source:
     sha256: 4872e72e188a5aa1124db0c3b163a4163e84ead359a514d86dd7c6fa2d2ff02a         # [win]
 
 build:
-  number: 5
+  number: 0
   script_env:
     - PY_INTERP_LINKAGE_NATURE
     - PY_INTERP_DEBUG
